--- a/SensorFusion.ioc
+++ b/SensorFusion.ioc
@@ -1,6 +1,8 @@
 #MicroXplorer Configuration settings - do not modify
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
+I2C1.IPParameters=OwnAddress
+I2C1.OwnAddress=0x19
 I2S2.AudioFreq=I2S_AUDIOFREQ_96K
 I2S2.ErrorAudioFreq=0.15 %
 I2S2.FullDuplexMode=I2S_FULLDUPLEXMODE_ENABLE
@@ -18,14 +20,15 @@ I2S3.VirtualMode=I2S_MODE_MASTER
 KeepUserPlacement=false
 Mcu.CPN=STM32F411VET6
 Mcu.Family=STM32F4
-Mcu.IP0=I2S2
-Mcu.IP1=I2S3
-Mcu.IP2=NVIC
-Mcu.IP3=RCC
-Mcu.IP4=SPI1
-Mcu.IP5=SYS
-Mcu.IP6=USB_OTG_FS
-Mcu.IPNb=7
+Mcu.IP0=I2C1
+Mcu.IP1=I2S2
+Mcu.IP2=I2S3
+Mcu.IP3=NVIC
+Mcu.IP4=RCC
+Mcu.IP5=SPI1
+Mcu.IP6=SYS
+Mcu.IP7=USB_OTG_FS
+Mcu.IPNb=8
 Mcu.Name=STM32F411V(C-E)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE2
@@ -84,8 +87,7 @@ NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:true\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 PA0-WKUP.Locked=true
-PA0-WKUP.Mode=SYS_WakeUp0
-PA0-WKUP.Signal=SYS_WKUP
+PA0-WKUP.Signal=GPIO_Input
 PA10.Locked=true
 PA10.Mode=OTG/Dual_Role_Device
 PA10.Signal=USB_OTG_FS_ID
@@ -151,8 +153,10 @@ PB3.Locked=true
 PB3.Mode=Trace_Asynchronous_SW
 PB3.Signal=SYS_JTDO-SWO
 PB6.Locked=true
+PB6.Mode=I2C
 PB6.Signal=I2C1_SCL
 PB9.Locked=true
+PB9.Mode=I2C
 PB9.Signal=I2C1_SDA
 PC0.GPIOParameters=PinState,GPIO_Label
 PC0.GPIO_Label=OTG_FS_PowerSwitchOn
@@ -241,8 +245,6 @@ PE2.GPIOParameters=GPIO_Label
 PE2.GPIO_Label=DATA_Ready [LSM303DLHC_DRDY]
 PE2.Locked=true
 PE2.Signal=GPIO_Input
-PE3.GPIOParameters=GPIO_Label
-PE3.GPIO_Label=CS_I2C/SPI [L3GD20_CS_I2C/SPI]
 PE3.Locked=true
 PE3.Signal=GPIO_Output
 PE4.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
@@ -293,7 +295,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_I2S2_Init-I2S2-false-HAL-true,5-MX_I2S3_Init-I2S3-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_USB_OTG_FS_USB_Init-USB_OTG_FS-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_I2S2_Init-I2S2-false-HAL-true,4-MX_I2S3_Init-I2S3-false-HAL-true,5-MX_SPI1_Init-SPI1-false-HAL-true,6-MX_USB_OTG_FS_USB_Init-USB_OTG_FS-false-HAL-true,7-MX_I2C1_Init-I2C1-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=96000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
