--- a/SensorFusion.ioc
+++ b/SensorFusion.ioc
@@ -27,8 +27,9 @@ Mcu.IP3=NVIC
 Mcu.IP4=RCC
 Mcu.IP5=SPI1
 Mcu.IP6=SYS
-Mcu.IP7=USB_OTG_FS
-Mcu.IPNb=8
+Mcu.IP7=TIM10
+Mcu.IP8=USB_OTG_FS
+Mcu.IPNb=9
 Mcu.Name=STM32F411V(C-E)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE2
@@ -63,13 +64,14 @@ Mcu.Pin34=PB6
 Mcu.Pin35=PB9
 Mcu.Pin36=PE1
 Mcu.Pin37=VP_SYS_VS_Systick
+Mcu.Pin38=VP_TIM10_VS_ClockSourceINT
 Mcu.Pin4=PC14-OSC32_IN
 Mcu.Pin5=PC15-OSC32_OUT
 Mcu.Pin6=PH0 - OSC_IN
 Mcu.Pin7=PH1 - OSC_OUT
 Mcu.Pin8=PC0
 Mcu.Pin9=PC2
-Mcu.PinsNb=38
+Mcu.PinsNb=39
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411VETx
@@ -342,8 +344,12 @@ SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=CalculateBaudRate,BaudRatePrescaler,Mode,VirtualType,Direction
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
+TIM10.IPParameters=Prescaler
+TIM10.Prescaler=9600 - 1
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM10_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM10_VS_ClockSourceINT.Signal=TIM10_VS_ClockSourceINT
 board=STM32F411E-DISCO
 boardIOC=true
 isbadioc=false
