--- a/SensorFusion.ioc
+++ b/SensorFusion.ioc
@@ -31,45 +31,42 @@ Mcu.IP7=USB_OTG_FS
 Mcu.IPNb=8
 Mcu.Name=STM32F411V(C-E)Tx
 Mcu.Package=LQFP100
-Mcu.Pin0=PE2
-Mcu.Pin1=PE3
-Mcu.Pin10=PC3
-Mcu.Pin11=PA0-WKUP
-Mcu.Pin12=PA4
-Mcu.Pin13=PA5
-Mcu.Pin14=PA6
-Mcu.Pin15=PA7
-Mcu.Pin16=PB10
-Mcu.Pin17=PB12
-Mcu.Pin18=PD12
-Mcu.Pin19=PD13
-Mcu.Pin2=PE4
-Mcu.Pin20=PD14
-Mcu.Pin21=PD15
-Mcu.Pin22=PC7
-Mcu.Pin23=PA9
-Mcu.Pin24=PA10
-Mcu.Pin25=PA11
-Mcu.Pin26=PA12
-Mcu.Pin27=PA13
-Mcu.Pin28=PA14
-Mcu.Pin29=PC10
-Mcu.Pin3=PE5
-Mcu.Pin30=PC12
-Mcu.Pin31=PD4
-Mcu.Pin32=PD5
-Mcu.Pin33=PB3
-Mcu.Pin34=PB6
-Mcu.Pin35=PB9
-Mcu.Pin36=PE1
-Mcu.Pin37=VP_SYS_VS_Systick
-Mcu.Pin4=PC14-OSC32_IN
-Mcu.Pin5=PC15-OSC32_OUT
-Mcu.Pin6=PH0 - OSC_IN
-Mcu.Pin7=PH1 - OSC_OUT
-Mcu.Pin8=PC0
-Mcu.Pin9=PC2
-Mcu.PinsNb=38
+Mcu.Pin0=PE3
+Mcu.Pin1=PC14-OSC32_IN
+Mcu.Pin10=PA5
+Mcu.Pin11=PA6
+Mcu.Pin12=PA7
+Mcu.Pin13=PB10
+Mcu.Pin14=PB12
+Mcu.Pin15=PD12
+Mcu.Pin16=PD13
+Mcu.Pin17=PD14
+Mcu.Pin18=PD15
+Mcu.Pin19=PC7
+Mcu.Pin2=PC15-OSC32_OUT
+Mcu.Pin20=PA9
+Mcu.Pin21=PA10
+Mcu.Pin22=PA11
+Mcu.Pin23=PA12
+Mcu.Pin24=PA13
+Mcu.Pin25=PA14
+Mcu.Pin26=PC10
+Mcu.Pin27=PC12
+Mcu.Pin28=PD4
+Mcu.Pin29=PD5
+Mcu.Pin3=PH0 - OSC_IN
+Mcu.Pin30=PB3
+Mcu.Pin31=PB6
+Mcu.Pin32=PB9
+Mcu.Pin33=PE1
+Mcu.Pin34=VP_SYS_VS_Systick
+Mcu.Pin4=PH1 - OSC_OUT
+Mcu.Pin5=PC0
+Mcu.Pin6=PC2
+Mcu.Pin7=PC3
+Mcu.Pin8=PA0-WKUP
+Mcu.Pin9=PA4
+Mcu.PinsNb=35
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411VETx
@@ -119,18 +116,12 @@ PA4.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA4.Locked=true
 PA4.Mode=Half_Duplex_Master
 PA4.Signal=I2S3_WS
-PA5.GPIOParameters=GPIO_Label
-PA5.GPIO_Label=SPI1_SCK [L3GD20_SC/SPC]
 PA5.Locked=true
 PA5.Mode=Full_Duplex_Master
 PA5.Signal=SPI1_SCK
-PA6.GPIOParameters=GPIO_Label
-PA6.GPIO_Label=SPI1_MISO [L3GD20_AS0/SDO]
 PA6.Locked=true
 PA6.Mode=Full_Duplex_Master
 PA6.Signal=SPI1_MISO
-PA7.GPIOParameters=GPIO_Label
-PA7.GPIO_Label=SPI1_MOSI [L3GD20_SDA/SDI/SDO]
 PA7.Locked=true
 PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
@@ -241,22 +232,10 @@ PE1.GPIO_Label=MEMS_INT2 [L3GD20_INT2]
 PE1.GPIO_ModeDefaultEXTI=GPIO_MODE_EVT_RISING
 PE1.Locked=true
 PE1.Signal=GPXTI1
-PE2.GPIOParameters=GPIO_Label
-PE2.GPIO_Label=DATA_Ready [LSM303DLHC_DRDY]
-PE2.Locked=true
-PE2.Signal=GPIO_Input
+PE3.GPIOParameters=GPIO_Label
+PE3.GPIO_Label=CS_I2C/SPI [I3G4250D]
 PE3.Locked=true
 PE3.Signal=GPIO_Output
-PE4.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
-PE4.GPIO_Label=INT1 [LSM303DLHC_INT1]
-PE4.GPIO_ModeDefaultEXTI=GPIO_MODE_EVT_RISING
-PE4.Locked=true
-PE4.Signal=GPXTI4
-PE5.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
-PE5.GPIO_Label=INT2 [LSM303DLHC_INT2]
-PE5.GPIO_ModeDefaultEXTI=GPIO_MODE_EVT_RISING
-PE5.Locked=true
-PE5.Signal=GPXTI5
 PH0\ -\ OSC_IN.GPIOParameters=GPIO_Label
 PH0\ -\ OSC_IN.GPIO_Label=PH0-OSC_IN
 PH0\ -\ OSC_IN.Locked=true
@@ -295,7 +274,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_I2S2_Init-I2S2-false-HAL-true,4-MX_I2S3_Init-I2S3-false-HAL-true,5-MX_SPI1_Init-SPI1-false-HAL-true,6-MX_USB_OTG_FS_USB_Init-USB_OTG_FS-false-HAL-true,7-MX_I2C1_Init-I2C1-false-HAL-true,8-MX_TIM10_Init-TIM10-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_I2S2_Init-I2S2-false-HAL-true,4-MX_I2S3_Init-I2S3-false-HAL-true,5-MX_SPI1_Init-SPI1-false-HAL-true,6-MX_USB_OTG_FS_USB_Init-USB_OTG_FS-false-HAL-true,7-MX_I2C1_Init-I2C1-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=96000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -332,14 +311,9 @@ RCC.VCOOutputFreq_Value=384000000
 RCC.VcooutputI2S=160000000
 SH.GPXTI1.0=GPIO_EXTI1
 SH.GPXTI1.ConfNb=1
-SH.GPXTI4.0=GPIO_EXTI4
-SH.GPXTI4.ConfNb=1
-SH.GPXTI5.0=GPIO_EXTI5
-SH.GPXTI5.ConfNb=1
-SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
 SPI1.CalculateBaudRate=48.0 MBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
-SPI1.IPParameters=CalculateBaudRate,BaudRatePrescaler,Mode,VirtualType,Direction
+SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
 VP_SYS_VS_Systick.Mode=SysTick
