Implmented ST API for I3G4250D

--- a/SensorFusion.ioc
+++ b/SensorFusion.ioc
@@ -233,7 +233,7 @@ PE1.GPIO_ModeDefaultEXTI=GPIO_MODE_EVT_RISING
 PE1.Locked=true
 PE1.Signal=GPXTI1
 PE3.GPIOParameters=GPIO_Label
-PE3.GPIO_Label=CS_I2C/SPI [I3G4250D]
+PE3.GPIO_Label=CS [I3G4250D]
 PE3.Locked=true
 PE3.Signal=GPIO_Output
 PH0\ -\ OSC_IN.GPIOParameters=GPIO_Label
@@ -311,9 +311,11 @@ RCC.VCOOutputFreq_Value=384000000
 RCC.VcooutputI2S=160000000
 SH.GPXTI1.0=GPIO_EXTI1
 SH.GPXTI1.ConfNb=1
-SPI1.CalculateBaudRate=48.0 MBits/s
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_16
+SPI1.CLKPolarity=SPI_POLARITY_LOW
+SPI1.CalculateBaudRate=6.0 MBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
-SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
+SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,CLKPolarity
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
 VP_SYS_VS_Systick.Mode=SysTick
