Added bad scheduler

--- a/SensorFusion.ioc
+++ b/SensorFusion.ioc
@@ -3,70 +3,48 @@ File.Version=6
 GPIO.groupedBy=Group By Peripherals
 I2C1.IPParameters=OwnAddress
 I2C1.OwnAddress=0x19
-I2S2.AudioFreq=I2S_AUDIOFREQ_96K
-I2S2.ErrorAudioFreq=0.15 %
-I2S2.FullDuplexMode=I2S_FULLDUPLEXMODE_ENABLE
-I2S2.IPParameters=FullDuplexMode,ErrorAudioFreq,RealAudioFreq,AudioFreq,Instance,VirtualMode
-I2S2.Instance=SPI$Index
-I2S2.RealAudioFreq=96.153 KHz
-I2S2.VirtualMode=I2S_MODE_MASTER
-I2S3.AudioFreq=I2S_AUDIOFREQ_96K
-I2S3.ErrorAudioFreq=-6.99 %
-I2S3.FullDuplexMode=I2S_FULLDUPLEXMODE_DISABLE
-I2S3.IPParameters=AudioFreq,ErrorAudioFreq,RealAudioFreq,Instance,VirtualMode,FullDuplexMode
-I2S3.Instance=SPI$Index
-I2S3.RealAudioFreq=89.285 KHz
-I2S3.VirtualMode=I2S_MODE_MASTER
 KeepUserPlacement=false
 Mcu.CPN=STM32F411VET6
 Mcu.Family=STM32F4
 Mcu.IP0=I2C1
-Mcu.IP1=I2S2
-Mcu.IP2=I2S3
-Mcu.IP3=NVIC
-Mcu.IP4=RCC
-Mcu.IP5=SPI1
-Mcu.IP6=SYS
-Mcu.IP7=USB_OTG_FS
-Mcu.IPNb=8
+Mcu.IP1=NVIC
+Mcu.IP2=RCC
+Mcu.IP3=SPI1
+Mcu.IP4=SYS
+Mcu.IP5=TIM10
+Mcu.IP6=USB_OTG_FS
+Mcu.IPNb=7
 Mcu.Name=STM32F411V(C-E)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE3
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PA5
-Mcu.Pin11=PA6
-Mcu.Pin12=PA7
-Mcu.Pin13=PB10
-Mcu.Pin14=PB12
-Mcu.Pin15=PD12
-Mcu.Pin16=PD13
-Mcu.Pin17=PD14
-Mcu.Pin18=PD15
-Mcu.Pin19=PC7
+Mcu.Pin10=PD12
+Mcu.Pin11=PD13
+Mcu.Pin12=PD14
+Mcu.Pin13=PD15
+Mcu.Pin14=PA9
+Mcu.Pin15=PA10
+Mcu.Pin16=PA11
+Mcu.Pin17=PA12
+Mcu.Pin18=PA13
+Mcu.Pin19=PA14
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=PA9
-Mcu.Pin21=PA10
-Mcu.Pin22=PA11
-Mcu.Pin23=PA12
-Mcu.Pin24=PA13
-Mcu.Pin25=PA14
-Mcu.Pin26=PC10
-Mcu.Pin27=PC12
-Mcu.Pin28=PD4
-Mcu.Pin29=PD5
+Mcu.Pin20=PD4
+Mcu.Pin21=PD5
+Mcu.Pin22=PB3
+Mcu.Pin23=PB6
+Mcu.Pin24=PB9
+Mcu.Pin25=PE1
+Mcu.Pin26=VP_SYS_VS_Systick
+Mcu.Pin27=VP_TIM10_VS_ClockSourceINT
 Mcu.Pin3=PH0 - OSC_IN
-Mcu.Pin30=PB3
-Mcu.Pin31=PB6
-Mcu.Pin32=PB9
-Mcu.Pin33=PE1
-Mcu.Pin34=VP_SYS_VS_Systick
 Mcu.Pin4=PH1 - OSC_OUT
 Mcu.Pin5=PC0
-Mcu.Pin6=PC2
-Mcu.Pin7=PC3
-Mcu.Pin8=PA0-WKUP
-Mcu.Pin9=PA4
-Mcu.PinsNb=35
+Mcu.Pin6=PA0-WKUP
+Mcu.Pin7=PA5
+Mcu.Pin8=PA6
+Mcu.Pin9=PA7
+Mcu.PinsNb=28
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411VETx
@@ -108,14 +86,6 @@ PA14.GPIO_Label=SWCLK
 PA14.Locked=true
 PA14.Mode=Trace_Asynchronous_SW
 PA14.Signal=SYS_JTCK-SWCLK
-PA4.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
-PA4.GPIO_Label=I2S3_WS [CS43L22_LRCK]
-PA4.GPIO_Mode=GPIO_MODE_AF_PP
-PA4.GPIO_PuPd=GPIO_NOPULL
-PA4.GPIO_Speed=GPIO_SPEED_FREQ_LOW
-PA4.Locked=true
-PA4.Mode=Half_Duplex_Master
-PA4.Signal=I2S3_WS
 PA5.Locked=true
 PA5.Mode=Full_Duplex_Master
 PA5.Signal=SPI1_SCK
@@ -130,14 +100,6 @@ PA9.GPIO_Label=VBUS_FS
 PA9.Locked=true
 PA9.Mode=Activate_VBUS
 PA9.Signal=USB_OTG_FS_VBUS
-PB10.GPIOParameters=GPIO_Label
-PB10.GPIO_Label=CLK_IN [MP45DT02_CLK]
-PB10.Locked=true
-PB10.Mode=Full_Duplex_Master
-PB10.Signal=I2S2_CK
-PB12.Locked=true
-PB12.Mode=Full_Duplex_Master
-PB12.Signal=I2S2_WS
 PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=SWO
 PB3.Locked=true
@@ -154,22 +116,6 @@ PC0.GPIO_Label=OTG_FS_PowerSwitchOn
 PC0.Locked=true
 PC0.PinState=GPIO_PIN_SET
 PC0.Signal=GPIO_Output
-PC10.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
-PC10.GPIO_Label=I2S3_SCK [CS43L22_SCLK]
-PC10.GPIO_Mode=GPIO_MODE_AF_PP
-PC10.GPIO_PuPd=GPIO_NOPULL
-PC10.GPIO_Speed=GPIO_SPEED_FREQ_LOW
-PC10.Locked=true
-PC10.Mode=Half_Duplex_Master
-PC10.Signal=I2S3_CK
-PC12.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
-PC12.GPIO_Label=I2S3_SD [CS43L22_SDIN]
-PC12.GPIO_Mode=GPIO_MODE_AF_PP
-PC12.GPIO_PuPd=GPIO_NOPULL
-PC12.GPIO_Speed=GPIO_SPEED_FREQ_LOW
-PC12.Locked=true
-PC12.Mode=Half_Duplex_Master
-PC12.Signal=I2S3_SD
 PC14-OSC32_IN.GPIOParameters=GPIO_Label
 PC14-OSC32_IN.GPIO_Label=PC14-OSC32_IN
 PC14-OSC32_IN.Locked=true
@@ -180,21 +126,6 @@ PC15-OSC32_OUT.GPIO_Label=PC15-OSC32_OUT
 PC15-OSC32_OUT.Locked=true
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
-PC2.Mode=Full_Duplex_Master
-PC2.Signal=I2S2_ext_SD
-PC3.GPIOParameters=GPIO_Label
-PC3.GPIO_Label=PDM_OUT [MP45DT02_DOUT]
-PC3.Locked=true
-PC3.Mode=Full_Duplex_Master
-PC3.Signal=I2S2_SD
-PC7.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
-PC7.GPIO_Label=I2S3_MCK [CS43L22_MCLK]
-PC7.GPIO_Mode=GPIO_MODE_AF_PP
-PC7.GPIO_PuPd=GPIO_NOPULL
-PC7.GPIO_Speed=GPIO_SPEED_FREQ_LOW
-PC7.Locked=true
-PC7.Mode=Master_Clock_Activated
-PC7.Signal=I2S3_MCK
 PD12.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
 PD12.GPIO_Label=LD4 [Green Led]
 PD12.GPIO_PuPd=GPIO_NOPULL
@@ -274,7 +205,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_I2S2_Init-I2S2-false-HAL-true,4-MX_I2S3_Init-I2S3-false-HAL-true,5-MX_SPI1_Init-SPI1-false-HAL-true,6-MX_USB_OTG_FS_USB_Init-USB_OTG_FS-false-HAL-true,7-MX_I2C1_Init-I2C1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_I2S2_Init-I2S2-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_USB_OTG_FS_USB_Init-USB_OTG_FS-false-HAL-true,6-MX_I2C1_Init-I2C1-false-HAL-true,7-MX_TIM10_Init-TIM10-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=96000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -318,8 +249,13 @@ SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,CLKPolarity
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
+TIM10.IPParameters=Prescaler
+TIM10.IPParametersWithoutCheck=Prescaler
+TIM10.Prescaler=TIM10_PRESCALER - 1
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM10_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM10_VS_ClockSourceINT.Signal=TIM10_VS_ClockSourceINT
 board=STM32F411E-DISCO
 boardIOC=true
 isbadioc=false
