--- a/SensorFusion.ioc
+++ b/SensorFusion.ioc
@@ -12,8 +12,9 @@ Mcu.IP2=RCC
 Mcu.IP3=SPI1
 Mcu.IP4=SYS
 Mcu.IP5=TIM10
-Mcu.IP6=USB_OTG_FS
-Mcu.IPNb=7
+Mcu.IP6=TIM11
+Mcu.IP7=USB_OTG_FS
+Mcu.IPNb=8
 Mcu.Name=STM32F411V(C-E)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE3
@@ -37,6 +38,7 @@ Mcu.Pin24=PB9
 Mcu.Pin25=PE1
 Mcu.Pin26=VP_SYS_VS_Systick
 Mcu.Pin27=VP_TIM10_VS_ClockSourceINT
+Mcu.Pin28=VP_TIM11_VS_ClockSourceINT
 Mcu.Pin3=PH0 - OSC_IN
 Mcu.Pin4=PH1 - OSC_OUT
 Mcu.Pin5=PC0
@@ -44,7 +46,7 @@ Mcu.Pin6=PA0-WKUP
 Mcu.Pin7=PA5
 Mcu.Pin8=PA6
 Mcu.Pin9=PA7
-Mcu.PinsNb=28
+Mcu.PinsNb=29
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411VETx
@@ -205,7 +207,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_I2S2_Init-I2S2-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_USB_OTG_FS_USB_Init-USB_OTG_FS-false-HAL-true,6-MX_I2C1_Init-I2C1-false-HAL-true,7-MX_TIM10_Init-TIM10-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_USB_OTG_FS_USB_Init-USB_OTG_FS-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_TIM10_Init-TIM10-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=96000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -249,13 +251,20 @@ SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,CLKPolarity
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
-TIM10.IPParameters=Prescaler
+TIM10.IPParameters=Prescaler,Period
 TIM10.IPParametersWithoutCheck=Prescaler
+TIM10.Period=50000 - 1
 TIM10.Prescaler=TIM10_PRESCALER - 1
+TIM11.IPParameters=Prescaler,Period
+TIM11.IPParametersWithoutCheck=Prescaler
+TIM11.Period=50000 - 1
+TIM11.Prescaler=TIM11_PRESCALER - 1
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM10_VS_ClockSourceINT.Mode=Enable_Timer
 VP_TIM10_VS_ClockSourceINT.Signal=TIM10_VS_ClockSourceINT
+VP_TIM11_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM11_VS_ClockSourceINT.Signal=TIM11_VS_ClockSourceINT
 board=STM32F411E-DISCO
 boardIOC=true
 isbadioc=false
