--- a/SensorFusion.ioc
+++ b/SensorFusion.ioc
@@ -30,15 +30,14 @@ Mcu.Pin17=PA12
 Mcu.Pin18=PA13
 Mcu.Pin19=PA14
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=PD4
-Mcu.Pin21=PD5
-Mcu.Pin22=PB3
-Mcu.Pin23=PB6
-Mcu.Pin24=PB9
-Mcu.Pin25=PE1
-Mcu.Pin26=VP_SYS_VS_Systick
-Mcu.Pin27=VP_TIM10_VS_ClockSourceINT
-Mcu.Pin28=VP_TIM11_VS_ClockSourceINT
+Mcu.Pin20=PD5
+Mcu.Pin21=PB3
+Mcu.Pin22=PB6
+Mcu.Pin23=PB9
+Mcu.Pin24=PE1
+Mcu.Pin25=VP_SYS_VS_Systick
+Mcu.Pin26=VP_TIM10_VS_ClockSourceINT
+Mcu.Pin27=VP_TIM11_VS_ClockSourceINT
 Mcu.Pin3=PH0 - OSC_IN
 Mcu.Pin4=PH1 - OSC_OUT
 Mcu.Pin5=PC0
@@ -46,7 +45,7 @@ Mcu.Pin6=PA0-WKUP
 Mcu.Pin7=PA5
 Mcu.Pin8=PA6
 Mcu.Pin9=PA7
-Mcu.PinsNb=29
+Mcu.PinsNb=28
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411VETx
@@ -54,6 +53,7 @@ MxCube.Version=6.6.1
 MxDb.Version=DB.6.0.60
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
+NVIC.EXTI1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
@@ -152,17 +152,12 @@ PD15.GPIO_PuPd=GPIO_NOPULL
 PD15.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PD15.Locked=true
 PD15.Signal=GPIO_Output
-PD4.GPIOParameters=GPIO_Label
-PD4.GPIO_Label=Audio_RST [CS43L22_RESET]
-PD4.Locked=true
-PD4.Signal=GPIO_Output
 PD5.GPIOParameters=GPIO_Label
 PD5.GPIO_Label=OTG_FS_OverCurrent
 PD5.Locked=true
 PD5.Signal=GPIO_Input
-PE1.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
-PE1.GPIO_Label=MEMS_INT2 [L3GD20_INT2]
-PE1.GPIO_ModeDefaultEXTI=GPIO_MODE_EVT_RISING
+PE1.GPIOParameters=GPIO_Label
+PE1.GPIO_Label=GPIO_EXTI1 [I3G4250D DRDY]
 PE1.Locked=true
 PE1.Signal=GPXTI1
 PE3.GPIOParameters=GPIO_Label
@@ -184,7 +179,7 @@ ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=6
 ProjectManager.ComputerToolchain=false
-ProjectManager.CoupleFile=false
+ProjectManager.CoupleFile=true
 ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
@@ -207,7 +202,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_USB_OTG_FS_USB_Init-USB_OTG_FS-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_TIM10_Init-TIM10-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_USB_OTG_FS_USB_Init-USB_OTG_FS-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_TIM10_Init-TIM10-false-HAL-true,7-MX_TIM11_Init-TIM11-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=96000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
