--- a/SensorFusion.ioc
+++ b/SensorFusion.ioc
@@ -13,39 +13,32 @@ Mcu.IP3=SPI1
 Mcu.IP4=SYS
 Mcu.IP5=TIM10
 Mcu.IP6=TIM11
-Mcu.IP7=USB_OTG_FS
-Mcu.IPNb=8
+Mcu.IPNb=7
 Mcu.Name=STM32F411V(C-E)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE3
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PD12
-Mcu.Pin11=PD13
-Mcu.Pin12=PD14
-Mcu.Pin13=PD15
-Mcu.Pin14=PA9
-Mcu.Pin15=PA10
-Mcu.Pin16=PA11
-Mcu.Pin17=PA12
-Mcu.Pin18=PA13
-Mcu.Pin19=PA14
+Mcu.Pin10=PD13
+Mcu.Pin11=PD14
+Mcu.Pin12=PD15
+Mcu.Pin13=PA13
+Mcu.Pin14=PA14
+Mcu.Pin15=PB3
+Mcu.Pin16=PB6
+Mcu.Pin17=PB9
+Mcu.Pin18=PE1
+Mcu.Pin19=VP_SYS_VS_Systick
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=PD5
-Mcu.Pin21=PB3
-Mcu.Pin22=PB6
-Mcu.Pin23=PB9
-Mcu.Pin24=PE1
-Mcu.Pin25=VP_SYS_VS_Systick
-Mcu.Pin26=VP_TIM10_VS_ClockSourceINT
-Mcu.Pin27=VP_TIM11_VS_ClockSourceINT
+Mcu.Pin20=VP_TIM10_VS_ClockSourceINT
+Mcu.Pin21=VP_TIM11_VS_ClockSourceINT
 Mcu.Pin3=PH0 - OSC_IN
 Mcu.Pin4=PH1 - OSC_OUT
-Mcu.Pin5=PC0
-Mcu.Pin6=PA0-WKUP
-Mcu.Pin7=PA5
-Mcu.Pin8=PA6
-Mcu.Pin9=PA7
-Mcu.PinsNb=28
+Mcu.Pin5=PA0-WKUP
+Mcu.Pin6=PA5
+Mcu.Pin7=PA6
+Mcu.Pin8=PA7
+Mcu.Pin9=PD12
+Mcu.PinsNb=22
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411VETx
@@ -65,19 +58,6 @@ NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:true\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 PA0-WKUP.Locked=true
 PA0-WKUP.Signal=GPIO_Input
-PA10.Locked=true
-PA10.Mode=OTG/Dual_Role_Device
-PA10.Signal=USB_OTG_FS_ID
-PA11.GPIOParameters=GPIO_Label
-PA11.GPIO_Label=OTG_FS_DM
-PA11.Locked=true
-PA11.Mode=OTG/Dual_Role_Device
-PA11.Signal=USB_OTG_FS_DM
-PA12.GPIOParameters=GPIO_Label
-PA12.GPIO_Label=OTG_FS_DP
-PA12.Locked=true
-PA12.Mode=OTG/Dual_Role_Device
-PA12.Signal=USB_OTG_FS_DP
 PA13.GPIOParameters=GPIO_Label
 PA13.GPIO_Label=SWDIO
 PA13.Locked=true
@@ -97,11 +77,6 @@ PA6.Signal=SPI1_MISO
 PA7.Locked=true
 PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
-PA9.GPIOParameters=GPIO_Label
-PA9.GPIO_Label=VBUS_FS
-PA9.Locked=true
-PA9.Mode=Activate_VBUS
-PA9.Signal=USB_OTG_FS_VBUS
 PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=SWO
 PB3.Locked=true
@@ -113,11 +88,6 @@ PB6.Signal=I2C1_SCL
 PB9.Locked=true
 PB9.Mode=I2C
 PB9.Signal=I2C1_SDA
-PC0.GPIOParameters=PinState,GPIO_Label
-PC0.GPIO_Label=OTG_FS_PowerSwitchOn
-PC0.Locked=true
-PC0.PinState=GPIO_PIN_SET
-PC0.Signal=GPIO_Output
 PC14-OSC32_IN.GPIOParameters=GPIO_Label
 PC14-OSC32_IN.GPIO_Label=PC14-OSC32_IN
 PC14-OSC32_IN.Locked=true
@@ -152,12 +122,8 @@ PD15.GPIO_PuPd=GPIO_NOPULL
 PD15.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PD15.Locked=true
 PD15.Signal=GPIO_Output
-PD5.GPIOParameters=GPIO_Label
-PD5.GPIO_Label=OTG_FS_OverCurrent
-PD5.Locked=true
-PD5.Signal=GPIO_Input
 PE1.GPIOParameters=GPIO_Label
-PE1.GPIO_Label=GPIO_EXTI1 [I3G4250D DRDY]
+PE1.GPIO_Label=EXTI1 [I3G4250D DRDY]
 PE1.Locked=true
 PE1.Signal=GPXTI1
 PE3.GPIOParameters=GPIO_Label
@@ -218,7 +184,7 @@ RCC.HCLKFreq_Value=96000000
 RCC.HSE_VALUE=8000000
 RCC.HSI_VALUE=16000000
 RCC.I2SClocksFreq_Value=160000000
-RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLI2SM,PLLI2SN,PLLM,PLLP,PLLQ,PLLQCLKFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOInputMFreq_Value,VCOOutputFreq_Value,VcooutputI2S
+RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLI2SM,PLLI2SN,PLLM,PLLP,PLLQ,PLLQCLKFreq_Value,PLLSourceVirtual,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOInputMFreq_Value,VCOOutputFreq_Value,VcooutputI2S
 RCC.LSI_VALUE=32000
 RCC.MCO2PinFreq_Value=96000000
 RCC.PLLCLKFreq_Value=96000000
@@ -228,6 +194,7 @@ RCC.PLLM=4
 RCC.PLLP=RCC_PLLP_DIV4
 RCC.PLLQ=8
 RCC.PLLQCLKFreq_Value=48000000
+RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 RCC.RTCFreq_Value=32000
 RCC.RTCHSEDivFreq_Value=4000000
 RCC.SYSCLKFreq_VALUE=96000000
