--- a/SensorFusion.ioc
+++ b/SensorFusion.ioc
@@ -16,29 +16,35 @@ Mcu.IP6=TIM11
 Mcu.IPNb=7
 Mcu.Name=STM32F411V(C-E)Tx
 Mcu.Package=LQFP100
-Mcu.Pin0=PE3
-Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PD13
-Mcu.Pin11=PD14
-Mcu.Pin12=PD15
-Mcu.Pin13=PA13
-Mcu.Pin14=PA14
-Mcu.Pin15=PB3
-Mcu.Pin16=PB6
-Mcu.Pin17=PB9
-Mcu.Pin18=PE1
-Mcu.Pin19=VP_SYS_VS_Systick
-Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=VP_TIM10_VS_ClockSourceINT
-Mcu.Pin21=VP_TIM11_VS_ClockSourceINT
-Mcu.Pin3=PH0 - OSC_IN
-Mcu.Pin4=PH1 - OSC_OUT
-Mcu.Pin5=PA0-WKUP
-Mcu.Pin6=PA5
-Mcu.Pin7=PA6
-Mcu.Pin8=PA7
-Mcu.Pin9=PD12
-Mcu.PinsNb=22
+Mcu.Pin0=PE2
+Mcu.Pin1=PE3
+Mcu.Pin10=PA6
+Mcu.Pin11=PA7
+Mcu.Pin12=PD12
+Mcu.Pin13=PD13
+Mcu.Pin14=PD14
+Mcu.Pin15=PD15
+Mcu.Pin16=PA9
+Mcu.Pin17=PA10
+Mcu.Pin18=PA13
+Mcu.Pin19=PA14
+Mcu.Pin2=PE4
+Mcu.Pin20=PB3
+Mcu.Pin21=PB6
+Mcu.Pin22=PB9
+Mcu.Pin23=PE0
+Mcu.Pin24=PE1
+Mcu.Pin25=VP_SYS_VS_Systick
+Mcu.Pin26=VP_TIM10_VS_ClockSourceINT
+Mcu.Pin27=VP_TIM11_VS_ClockSourceINT
+Mcu.Pin3=PE5
+Mcu.Pin4=PC14-OSC32_IN
+Mcu.Pin5=PC15-OSC32_OUT
+Mcu.Pin6=PH0 - OSC_IN
+Mcu.Pin7=PH1 - OSC_OUT
+Mcu.Pin8=PA0-WKUP
+Mcu.Pin9=PA5
+Mcu.PinsNb=28
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411VETx
@@ -46,7 +52,7 @@ MxCube.Version=6.6.1
 MxDb.Version=DB.6.0.60
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
-NVIC.EXTI1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.EXTI0_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
@@ -57,7 +63,8 @@ NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:true\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 PA0-WKUP.Locked=true
-PA0-WKUP.Signal=GPIO_Input
+PA0-WKUP.Signal=GPXTI0
+PA10.Locked=true
 PA13.GPIOParameters=GPIO_Label
 PA13.GPIO_Label=SWDIO
 PA13.Locked=true
@@ -77,6 +84,7 @@ PA6.Signal=SPI1_MISO
 PA7.Locked=true
 PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
+PA9.Locked=true
 PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=SWO
 PB3.Locked=true
@@ -122,14 +130,18 @@ PD15.GPIO_PuPd=GPIO_NOPULL
 PD15.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PD15.Locked=true
 PD15.Signal=GPIO_Output
+PE0.Locked=true
 PE1.GPIOParameters=GPIO_Label
 PE1.GPIO_Label=EXTI1 [I3G4250D DRDY]
 PE1.Locked=true
 PE1.Signal=GPXTI1
+PE2.Locked=true
 PE3.GPIOParameters=GPIO_Label
 PE3.GPIO_Label=CS [I3G4250D]
 PE3.Locked=true
 PE3.Signal=GPIO_Output
+PE4.Locked=true
+PE5.Locked=true
 PH0\ -\ OSC_IN.GPIOParameters=GPIO_Label
 PH0\ -\ OSC_IN.GPIO_Label=PH0-OSC_IN
 PH0\ -\ OSC_IN.Locked=true
@@ -168,7 +180,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_TIM10_Init-TIM10-false-HAL-true,6-MX_TIM11_Init-TIM11-false-HAL-true,7-MX_USART1_Init-USART1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_TIM10_Init-TIM10-false-HAL-true,6-MX_TIM11_Init-TIM11-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=96000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -204,6 +216,8 @@ RCC.VCOInputFreq_Value=2000000
 RCC.VCOInputMFreq_Value=1600000
 RCC.VCOOutputFreq_Value=384000000
 RCC.VcooutputI2S=160000000
+SH.GPXTI0.0=GPIO_EXTI0
+SH.GPXTI0.ConfNb=1
 SH.GPXTI1.0=GPIO_EXTI1
 SH.GPXTI1.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_16
