--- a/SensorFusion.ioc
+++ b/SensorFusion.ioc
@@ -62,6 +62,10 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_0
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:true\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
+PA0-WKUP.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
+PA0-WKUP.GPIO_Label=EXTI0 [USER]
+PA0-WKUP.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
+PA0-WKUP.GPIO_PuPd=GPIO_NOPULL
 PA0-WKUP.Locked=true
 PA0-WKUP.Signal=GPXTI0
 PA10.Locked=true
