--- a/SensorFusion.ioc
+++ b/SensorFusion.ioc
@@ -11,9 +11,10 @@ Mcu.IP1=NVIC
 Mcu.IP2=RCC
 Mcu.IP3=SPI1
 Mcu.IP4=SYS
-Mcu.IP5=TIM10
-Mcu.IP6=TIM11
-Mcu.IPNb=7
+Mcu.IP5=TIM5
+Mcu.IP6=TIM10
+Mcu.IP7=TIM11
+Mcu.IPNb=8
 Mcu.Name=STM32F411V(C-E)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE2
@@ -35,8 +36,9 @@ Mcu.Pin22=PB9
 Mcu.Pin23=PE0
 Mcu.Pin24=PE1
 Mcu.Pin25=VP_SYS_VS_Systick
-Mcu.Pin26=VP_TIM10_VS_ClockSourceINT
-Mcu.Pin27=VP_TIM11_VS_ClockSourceINT
+Mcu.Pin26=VP_TIM5_VS_ClockSourceINT
+Mcu.Pin27=VP_TIM10_VS_ClockSourceINT
+Mcu.Pin28=VP_TIM11_VS_ClockSourceINT
 Mcu.Pin3=PE5
 Mcu.Pin4=PC14-OSC32_IN
 Mcu.Pin5=PC15-OSC32_OUT
@@ -44,7 +46,7 @@ Mcu.Pin6=PH0 - OSC_IN
 Mcu.Pin7=PH1 - OSC_OUT
 Mcu.Pin8=PA0-WKUP
 Mcu.Pin9=PA5
-Mcu.PinsNb=28
+Mcu.PinsNb=29
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411VETx
@@ -239,12 +241,17 @@ TIM11.IPParameters=Prescaler,Period
 TIM11.IPParametersWithoutCheck=Prescaler
 TIM11.Period=50000 - 1
 TIM11.Prescaler=TIM11_PRESCALER - 1
+TIM5.IPParameters=Prescaler
+TIM5.IPParametersWithoutCheck=Prescaler
+TIM5.Prescaler=TIM5_PRESCALER - 1
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM10_VS_ClockSourceINT.Mode=Enable_Timer
 VP_TIM10_VS_ClockSourceINT.Signal=TIM10_VS_ClockSourceINT
 VP_TIM11_VS_ClockSourceINT.Mode=Enable_Timer
 VP_TIM11_VS_ClockSourceINT.Signal=TIM11_VS_ClockSourceINT
+VP_TIM5_VS_ClockSourceINT.Mode=Internal
+VP_TIM5_VS_ClockSourceINT.Signal=TIM5_VS_ClockSourceINT
 board=STM32F411E-DISCO
 boardIOC=true
 isbadioc=false
